# CircuitPython_PCA9955B

./: LICENSE  README.rst  README.rst.license  pca9955b.py  pca9955bClassesUML.puml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  release_gh.yml
docs/: api.rst  conf.py  examples.rst  examples.rst.license  index.rst
examples/: pca9955b_global_control.py  pca9955b_group_control.py  pca9955b_simpletest.py  pca9955b_subAddress.py
pca9955b/: __init__.py  pca9955_registers.py  pca9955b.py  pca9955b_groups.py
uml/: pca9955bClasses.svg.license  pca9955bClassesUML.puml
