# SPDX-FileCopyrightText: Copyright (c) 2025 Noel Anderson
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-pca9955b"
description = "CircuitPython helper library for the NXP 16-Channel I²C-Bus Constant-Current LED Driver"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Noel Anderson", email = "noel_anderson@outlook.com"}
]
urls = {Homepage = "https://github.com/noelanderson/CircuitPython_PCA9955B"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "pca9955b",
    "pca9955b,",
    "LED",
    "Driver,",
    "I2C,",
    "PWM",
    "Controller",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["pca9955b"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
